ssl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-auth
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  tls:
  - hosts:
    - example.com
    secretName: wildcard
  rules:
  - host: example.com
    http:
      paths:
      - path: /whoami
        pathType: Exact
        backend:
          service:
            name: whoami
            port:
              number: 3000
      - path: /nginx
        pathType: Exact
        backend:
          service:
            name: nginx-service
            port:
              number: 3000
